PR bin/54088: make "destroy" remove the protective MBR too. We could make this optional if someone comes up with a good reason to leave it intact.